# DISTRIBUTED-CACHING

./: Cargo.toml  Dockerfile  README.md  bench.sh  docker-compose.yml
src/: config.rs  error.rs  main.rs
src/cluster/: gossip.rs  mod.rs
src/metrics/: mod.rs
src/network/: http_server.rs  mod.rs  node_client.rs  node_server.rs
src/persistence/: snapshot.rs  wal.rs
src/router/: circuit_breaker.rs  consistent_hash.rs  mod.rs
src/storage/: engine.rs  eviction.rs  mod.rs
