[package]
name = "distributed-cache"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cache-node"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = ">=0.7, <0.8", features = ["json", "macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace", "cors"] }
dashmap = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = { version = "0.13", features = ["process"] }
anyhow = "1"
thiserror = "1"
uuid = { version = ">=1.0, <1.7", features = ["v4"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["std"] }
parking_lot = "0.12"
crc32fast = "1"
sha2 = "0.10"
async-trait = "0.1"
futures = "0.3"
clap = { version = ">=4.0, <4.5", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec"] }
once_cell = "1"
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
http = "0.2"

# Force old url to avoid icu deps
url = ">=2.0, <2.5"
